Cleanup simple packet handlers